--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
             <div class="content">
                 <div class="container">
                     <div class="glassmorphism">
-
+                        <h1 class="change-formula" id="formula-left" onclick="change_formula_left()">Area</h1>
                     </div>
                     <div class="glassmorphism">
-                        
+                        <h1 class="formula" id="formula-topic">Area Formula: πr²</h1>
+                        <h1 class="formula" id="formula-detail">( 22/7 × Radius × Radius )</h1>
+                        <form id="input-form">
+                            <label for="first_value">r:</label>
+                            <input type="number" id="first_value" name="first_value">
+                          </form>
+                        <h1 class="formula" id="result">Result:</h1>
                     </div>
                     <div class="glassmorphism">
-
+                        <h1 class="change-formula" id="formula-right"  onclick="change_formula_right()">Circumference</h1>
                     </div>
                 </div>
             </div>
