--- a/html/index.html
+++ b/html/index.html
@@ -4,20 +4,21 @@
         <title id="page-title">Geometry Calculators</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="icon" href="/img/logo.png">
     </head>
     <body>
         <div class="page-content">
             <div class="content">
                 <div class="container">
                     <div class="glassmorphism">
-                        <img onclick="TH_lang()" class="lang-img" src="img/TH.png">
+                        <img onclick="TH_lang()" class="lang-img" src="/img/TH.png">
                     </div>
                     <div class="glassmorphism">
                         <h1 id="title">Geometry Calculators</h1>
                     </div>
                     <div class="glassmorphism">
-                        <img onclick="EN_lang()" class="lang-img" src="img/EN.png">
+                        <img onclick="EN_lang()" class="lang-img" src="/img/EN.png">
                     </div>
                 </div>
             </div>
@@ -42,7 +43,7 @@
                         <h1 class="change-dimension" onclick="change_shape_left()">-</h1>
                     </div>
                     <div class="glassmorphism">
-                        <div><img id="shape-img" src="img/circle.png"></div>
+                        <div><img id="shape-img" src="/img/circle-en.png"></div>
                     </div>
                     <div class="glassmorphism">
                         <h1 class="change-dimension" onclick="change_shape_right()">+</h1>
@@ -59,12 +60,12 @@
                         <div>
                             <h1 class="formula" id="formula-topic">Area Formula: π r ²</h1>
                             <h1 class="formula" id="formula-detail">{ ( 22 / 7 ) × Radius × Radius }</h1>
-                            <h1 class="formula"></h1>
                             <form id="input-form">
+                                <h1 class="formula"></h1>
                                 <label class="formula" for="input_1">Radius ( r ) : </label><br>
                                 <input class="formula" type="number" id="input_1" name="input_1" min="0"><br>
+                                <h1 class="gap-1"></h1>
                             </form>
-                            <h1 class="gap-1"></h1>
                             <button class="formula" onclick="calculator()">Calculate</button>
                         </div>
                     </div>
@@ -97,12 +98,12 @@
                         </div>
                     </div>
                     <div class="glassmorphism">
-                        <h1 class="change-formula" id="formula-right"  onclick="change_formula_right()">Circum ference</h1>
+                        <h1 class="change-formula" id="formula-right"  onclick="change_formula_right()">Circumference</h1>
                     </div>
                     
                 </div>
             </div>
         </div>
     </body>
-    <script src="app.js"></script>
+    <script src="/js/app.js"></script>
 </html>
