--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
         <title id="page-title">Geometry Calculators</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css">
-        <link rel="icon" href="/img/logo.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="logo.png">
     </head>
     <body>
         <div class="page-content">
             <div class="content">
                 <div class="container">
                     <div class="glassmorphism">
-                        <img onclick="TH_lang()" class="lang-img" src="/img/TH.png">
+                        <img onclick="TH_lang()" class="lang-img" src="TH.png">
                     </div>
                     <div class="glassmorphism">
                         <h1 id="title">Geometry Calculators</h1>
                     </div>
                     <div class="glassmorphism">
-                        <img onclick="EN_lang()" class="lang-img" src="/img/EN.png">
+                        <img onclick="EN_lang()" class="lang-img" src="EN.png">
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                         <h1 class="change-dimension" onclick="change_shape_left()">-</h1>
                     </div>
                     <div class="glassmorphism">
-                        <div><img id="shape-img" src="/img/circle-en.png"></div>
+                        <div><img id="shape-img" src="circle-en.png"></div>
                     </div>
                     <div class="glassmorphism">
                         <h1 class="change-dimension" onclick="change_shape_right()">+</h1>
@@ -105,5 +105,5 @@
             </div>
         </div>
     </body>
-    <script src="/js/app.js"></script>
+    <script src="app.js"></script>
 </html>
